--- a/tests/ag/CMakeLists.txt
+++ b/tests/ag/CMakeLists.txt
@@ -1,7 +1,9 @@
 set(component_name ag)
+set(TEST_LIST "")
 
 # Test : default
 set(test_name test_${PROJECT_NAME}_${component_name}_compile_time)
+list(APPEND TEST_LIST ${test_name})
 
 add_executable(${test_name} ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp)
 target_include_directories(${test_name} PRIVATE ${CMAKE_SOURCE_DIR}/tests/details/)
@@ -18,6 +20,7 @@ add_test(
 
 # Test : with bitfield support
 set(test_name test_${PROJECT_NAME}_${component_name}_bitfield_support_compile_time)
+list(APPEND TEST_LIST ${test_name})
 
 add_executable(${test_name} ${CMAKE_CURRENT_SOURCE_DIR}/test_bitfield_support.cpp)
 target_include_directories(${test_name} PRIVATE ${CMAKE_SOURCE_DIR}/tests/details/)
@@ -30,4 +33,9 @@ target_link_libraries(${test_name}
 add_test(
 	NAME 	${PROJECT_NAME}_validate_${component_name}_bitfield_support
 	COMMAND $<TARGET_FILE:${test_name}>
+)
+
+# Tests: all
+add_custom_target("${component_name}_build_all_tests"
+	DEPENDS ${TEST_LIST}
 )
