--- a/.github/workflows/cmake-Ubuntu-clang.yml
+++ b/.github/workflows/cmake-Ubuntu-clang.yml
@@ -24,11 +24,10 @@ jobs:
 
     - name: Initialize compiler (Clang)
     # sudo add-apt-repository ppa:ubuntu-toolchain-r/test -> latest gcc
-    # or sudo bash -c "$(wget -O - https://apt.llvm.org/llvm.sh ${relase_id})" 
       run: |
           sudo apt update
           sudo apt install libstdc++-$libstdcpp_release_id-dev
-          sudo bash -c "$(wget -O - https://apt.llvm.org/llvm.sh $relase_id)"
+          sudo bash -c "$(wget -O - https://apt.llvm.org/llvm.sh) $relase_id"
           sudo update-alternatives \
             --install /usr/bin/clang clang /usr/bin/clang-$relase_id 100
           sudo update-alternatives \
