--- a/.github/workflows/cmake-Ubuntu-clang.yml
+++ b/.github/workflows/cmake-Ubuntu-clang.yml
@@ -3,7 +3,7 @@ name: cmake-Ubuntu-clang
 on: [push, pull_request]
 
 env:
-  relase_id: 16
+  release_id: 16
   CC:   clang-16
   CXX:  clang++-16
   libstdcpp_release_id: 13
@@ -32,10 +32,10 @@ jobs:
             && sudo ./llvm.sh $release_id   \
             && rm llvm.sh
           sudo update-alternatives \
-            --install /usr/bin/clang clang /usr/bin/clang-$relase_id 100
+            --install /usr/bin/clang clang /usr/bin/clang-$release_id 100
           sudo update-alternatives \
-            --install /usr/bin/clang++ clang++ /usr/bin/clang++-$relase_id 100
-          sudo apt install libc++1-$relase_id libc++-$relase_id-dev libc++abi-$relase_id-dev libc++abi1-$relase_id
+            --install /usr/bin/clang++ clang++ /usr/bin/clang++-$release_id 100
+          sudo apt install libc++1-$release_id libc++-$release_id-dev libc++abi-$release_id-dev libc++abi1-$release_id
 
     - name: cmake create build env - ${{matrix.BUILD_TYPE}} - ${{matrix.STL_IMPLEMENTATION}}
       run: |
