--- a/.github/workflows/cmake-Ubuntu-clang.yml
+++ b/.github/workflows/cmake-Ubuntu-clang.yml
@@ -29,10 +29,7 @@ jobs:
           sudo apt install \
             gcc-$gcc_release_id \
             libstdc++-$gcc_release_id-dev
-          wget https://apt.llvm.org/llvm.sh \
-            && chmod +x llvm.sh             \
-            && sudo ./llvm.sh $release_id all  \
-            && rm llvm.sh
+          sudo bash -c "$(wget -O - https://apt.llvm.org/llvm.sh $release_id)"
           sudo update-alternatives \
             --install /usr/bin/clang clang /usr/bin/clang-$release_id 100
           sudo update-alternatives \
