--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,9 @@ project(csl LANGUAGES CXX)
 set(PROJECT_VERSION 0.1.0)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+#TODO(Guss): dev vs. consumer profiles
+# - consumer can load 1-N csl lib
+
 if (${PROJECT_SOURCE_DIR} STREQUAL ${PROJECT_BINARY_DIR})
   message(FATAL_ERROR "[${CMAKE_PROJECT_NAME}] : In-source build not recommended")
 endif()
@@ -24,23 +27,22 @@ set(CSL_COMPONENT_LIST
 )
 
 ### Components - tests
-option(CSL_BUILD_ALL_TESTS "Build all tests for csl" ON) # force all tests
+option(CSL_BUILD_ALL_TESTS "Build all tests for csl" OFF) # force all tests
 message(STATUS "[${CMAKE_PROJECT_NAME}] : CSL_BUILD_ALL_TESTS set to ${CSL_BUILD_ALL_TESTS} ...")
 set(CSL_TESTS_LIST "")
 
-### Components - add/glue (csl_lib)
+### Components - add/glue (csl_lib::name)
 function(CSL_ADD_COMPONENT component_name)
     message(STATUS "[${CMAKE_PROJECT_NAME}] : csl::${component_name} ...")
 
     # check if component has a custom cmake for custom pre-build/configuration
-    set(maybe_component_custom_cmake "${PROJECT_SOURCE_DIR}/cmake/${component_name}.cmake")
-    if (EXISTS "${maybe_component_custom_cmake}")
+    set(maybe_component_custom_cmake_path "${PROJECT_SOURCE_DIR}/cmake/${component_name}.cmake")
+    if (EXISTS "${maybe_component_custom_cmake_path}")
         message(STATUS "[${CMAKE_PROJECT_NAME}] : csl::${component_name} : custom cmake detected ...")
-        include("${maybe_component_custom_cmake}")
+        include("${maybe_component_custom_cmake_path}")
     endif()
 
     # add the component
-
     add_library(csl_${component_name}_lib INTERFACE)
     target_include_directories(csl_${component_name}_lib INTERFACE
         ${PROJECT_SOURCE_DIR}/includes/${component_name}
@@ -56,12 +58,7 @@ foreach(component_name IN LISTS CSL_COMPONENT_LIST)
     add_dependencies(csl_lib csl::${component_name})
     target_link_libraries(csl_lib INTERFACE csl::${component_name})
     
-    # tests
-    if (${CSL_BUILD_ALL_TESTS})
-        set(CSL_BUILD_TEST_${component_name} ON)
-    else()
-        option(CSL_BUILD_TEST_${component_name} "[${CMAKE_PROJECT_NAME}] : csl::${component_name} (tests)" OFF)
-    endif()
+    option(CSL_BUILD_TEST_${component_name} "[${CMAKE_PROJECT_NAME}] : csl::${component_name} (tests)" ${CSL_BUILD_ALL_TESTS})
     if (CSL_BUILD_TEST_${component_name})
         message(STATUS "[${CMAKE_PROJECT_NAME}] : csl::${component_name} (tests) ...")
         LIST(APPEND CSL_TESTS_LIST ${component_name})
@@ -76,6 +73,7 @@ else()
     enable_testing()
 
     add_compile_options(-Wall -Wno-unknown-pragmas)
+    #TODO(Guss): sanitizers
 
     # if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
     #     add_compile_options(-fdiagnostics-color=always)
@@ -89,7 +87,10 @@ endif()
 foreach(component_name IN LISTS CSL_TESTS_LIST)
     add_subdirectory(${PROJECT_SOURCE_DIR}/tests/${component_name})
 endforeach()
-foreach(component_name IN LISTS CSL_TESTS_LIST)
+
+## Examples
+option(CSL_BUILD_ALL_EXAMPLES "Build all examples for csl" OFF) # force all examples
+foreach(component_name IN LISTS CSL_COMPONENT_LIST)
     if (NOT EXISTS ${PROJECT_SOURCE_DIR}/examples/${component_name}/CMakeLists.txt)
         message(AUTHOR_WARNING "[${CMAKE_PROJECT_NAME}] : csl::${component_name} has no examples available, skipping ...")
         continue()
