--- a/tests/ag/CMakeLists.txt
+++ b/tests/ag/CMakeLists.txt
@@ -12,7 +12,7 @@ target_link_libraries(${test_name}
 )
 
 add_test(
-	NAME 	${PROJECT_NAME}_validate_${component_name}
+	NAME 	${PROJECT_NAME}_test_${component_name}
 	COMMAND $<TARGET_FILE:${test_name}>
 )
 
@@ -28,6 +28,6 @@ target_link_libraries(${test_name}
 )
 
 add_test(
-	NAME 	${PROJECT_NAME}_validate_${component_name}_bitfield_support
+	NAME 	${PROJECT_NAME}_test_${component_name}_bitfield_support
 	COMMAND $<TARGET_FILE:${test_name}>
 )
