--- a/tests/wf/CMakeLists.txt
+++ b/tests/wf/CMakeLists.txt
@@ -10,6 +10,6 @@ target_link_libraries(${test_name}
 )
 
 add_test(
-	NAME 	${PROJECT_NAME}_validate_${component_name}
+	NAME 	${PROJECT_NAME}_test_${component_name}
 	COMMAND $<TARGET_FILE:${test_name}>
 )
