--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,7 @@
     // "clang-tidy.buildPath": "${workspaceFolder}/build"
     "cmake.generator": "Ninja",
     "cmake.configureSettings": {
+        "CSL_BUILD_ALL": true,
         "CSL_BUILD_ALL_TESTS" : true,
         "CSL_BUILD_ALL_EXAMPLES": true,
         "CMAKE_EXPORT_COMPILE_COMMANDS" : true
