--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,13 +64,37 @@ endforeach()
 list(POP_BACK CMAKE_MESSAGE_INDENT)
 
 ### Components - tests
-option(CSL_BUILD_ALL_TESTS "Build all tests for csl" OFF) # force all tests
-message(VERBOSE "[${CMAKE_PROJECT_NAME}] CSL_BUILD_ALL_TESTS set to ${CSL_BUILD_ALL_TESTS} ...")
-set(CSL_ENABLED_TESTS_LIST "")
+option(CSL_ENABLE_ALL_TESTS "Build all tests for csl" OFF) # force all tests
+message(VERBOSE "[${CMAKE_PROJECT_NAME}] CSL_ENABLE_ALL_TESTS set to ${CSL_ENABLE_ALL_TESTS} ...")
+
+### Components - examples 
+option(CSL_ENABLE_ALL_EXAMPLES "Build all examples for csl" OFF) # force all examples
+message(VERBOSE "[${CMAKE_PROJECT_NAME}] CSL_ENABLE_ALL_EXAMPLES set to ${CSL_ENABLE_ALL_EXAMPLES} ...")
+
+### Opt-ins: Tests, Examples
+foreach(component_name IN LISTS CSL_ENABLED_COMPONENTS_LIST)
+    option(CSL_TEST_${component_name}    "[${CMAKE_PROJECT_NAME}] csl::${component_name} (tests)"   ${CSL_ENABLE_ALL_TESTS})
+    option(CSL_EXAMPLE_${component_name} "[${CMAKE_PROJECT_NAME}] csl::${component_name} (example)" ${CSL_ENABLE_ALL_EXAMPLES})
+endforeach()
+
+# list(LENGTH CSL_ENABLED_TESTS_LIST CSL_ENABLED_TESTS_LIST_length)
+# if (NOT ${CSL_ENABLED_TESTS_LIST_length} EQUAL 0)
+#     enable_testing()
+#     add_compile_options(-Wall -Wno-unknown-pragmas)
+#     #TODO(Guss): sanitizers
+
+#     # if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+#     #     add_compile_options(-fdiagnostics-color=always)
+#     # elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+#     #     add_compile_options(-fcolor-diagnostics)
+#     # endif()
+
+#     # Catch2
+# endif()
 
 ### Components libraries - csl_lib::<name>
-function(csl_create_component_library component_name)
-    message(STATUS "[${CMAKE_PROJECT_NAME}] csl::${component_name} ...")
+function(csl_create_component component_name)
+    message(STATUS "[${CMAKE_PROJECT_NAME}] csl::${component_name}")
 
     # check if component has a custom cmake for custom pre-build/configuration
     set(maybe_component_custom_cmake_path "${PROJECT_SOURCE_DIR}/cmake/${component_name}.cmake")
@@ -85,53 +109,35 @@ function(csl_create_component_library component_name)
         ${PROJECT_SOURCE_DIR}/includes/${component_name}
     )
     add_library(csl::${component_name} ALIAS csl_${component_name}_lib)
+
+    # test
+    option(CSL_TEST_${component_name} "[${CMAKE_PROJECT_NAME}] csl::${component_name} (tests)" ${CSL_ENABLE_ALL_TESTS})
+    if (CSL_TEST_${component_name})
+        message(STATUS "[${CMAKE_PROJECT_NAME}] csl::${component_name} (tests)")
+        add_subdirectory(${PROJECT_SOURCE_DIR}/tests/${component_name})
+    endif()
+
+    # example
+    option(CSL_EXAMPLE_${component_name} "[${CMAKE_PROJECT_NAME}] csl::${component_name} (example)" ${CSL_ENABLE_ALL_EXAMPLES})
+    if (CSL_EXAMPLE_${component_name})
+        if (NOT EXISTS ${PROJECT_SOURCE_DIR}/examples/${component_name}/CMakeLists.txt)
+            # message(AUTHOR_WARNING "[${CMAKE_PROJECT_NAME}] : csl::${component_name} has no examples available, skipping ...")
+        else()
+            message(STATUS "[${CMAKE_PROJECT_NAME}] csl::${component_name} (example)")
+            add_subdirectory(${PROJECT_SOURCE_DIR}/examples/${component_name})
+        endif()
+    endif()
+
 endfunction()
 
+message(STATUS "")
+message(STATUS "[${CMAKE_PROJECT_NAME}] csl_lib ...")
+list(APPEND CMAKE_MESSAGE_INDENT "   ")
 add_library(csl_lib INTERFACE)
 foreach(component_name IN LISTS CSL_ENABLED_COMPONENTS_LIST)
-    csl_create_component_library(${component_name})
+    csl_create_component(${component_name})
     
     add_dependencies(csl_lib csl::${component_name})
     target_link_libraries(csl_lib INTERFACE csl::${component_name})
-endforeach()
-
-## Tests
-foreach(component_name IN LISTS CSL_ENABLED_COMPONENTS_LIST)
-    option(CSL_BUILD_TEST_${component_name} "[${CMAKE_PROJECT_NAME}] csl::${component_name} (tests)" ${CSL_BUILD_ALL_TESTS})
-    if (CSL_BUILD_TEST_${component_name})
-        message(STATUS "[${CMAKE_PROJECT_NAME}] csl::${component_name} (tests) ...")
-        LIST(APPEND CSL_ENABLED_TESTS_LIST ${component_name})
-    endif()
-endforeach()
-
-list(LENGTH CSL_ENABLED_TESTS_LIST CSL_TESTS_LIST_length)
-if (NOT ${CSL_TESTS_LIST_length} EQUAL 0)
-    enable_testing()
-
-    add_compile_options(-Wall -Wno-unknown-pragmas)
-    #TODO(Guss): sanitizers
-
-    # if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-    #     add_compile_options(-fdiagnostics-color=always)
-    # elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-    #     add_compile_options(-fcolor-diagnostics)
-    # endif()
-
-    # Catch2
-endif()
-
-foreach(component_name IN LISTS CSL_ENABLED_TESTS_LIST)
-    add_subdirectory(${PROJECT_SOURCE_DIR}/tests/${component_name})
-endforeach()
-
-## Examples
-option(CSL_BUILD_ALL_EXAMPLES "Build all examples for csl" OFF) # force all examples
-list(APPEND CMAKE_MESSAGE_INDENT "  ")
-foreach(component_name IN LISTS CSL_COMPONENT_LIST)
-    if (NOT EXISTS ${PROJECT_SOURCE_DIR}/examples/${component_name}/CMakeLists.txt)
-        message(AUTHOR_WARNING "[${CMAKE_PROJECT_NAME}] : csl::${component_name} has no examples available, skipping ...")
-        continue()
-    endif()
-    add_subdirectory(${PROJECT_SOURCE_DIR}/examples/${component_name})
 endforeach()
 list(POP_BACK CMAKE_MESSAGE_INDENT)
