--- a/tests/ensure/CMakeLists.txt
+++ b/tests/ensure/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(component_name ensure)
-set(test_name test_${PROJECT_NAME}_${component_name}_compile_time)
+set(test_name test_${PROJECT_NAME}_${component_name}_cxx20_compile_time)
 
 add_executable(${test_name} ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp)
 add_dependencies(${test_name} ${PROJECT_NAME}::${component_name})
@@ -9,13 +9,13 @@ target_link_libraries(${test_name}
 )
 
 add_test(
-	NAME 	${PROJECT_NAME}_test_${component_name}
+	NAME 	${PROJECT_NAME}_test_${component_name}_cxx20
 	COMMAND $<TARGET_FILE:${test_name}>
 )
 
 # --- C++17 ---
 
-set(test_name test_${PROJECT_NAME}_${component_name}_compile_time_cxx_17)
+set(test_name test_${PROJECT_NAME}_${component_name}_cxx17_compile_time)
 
 add_executable(${test_name} ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp)
 set_target_properties(${test_name} PROPERTIES
@@ -29,6 +29,6 @@ target_link_libraries(${test_name}
 )
 
 add_test(
-	NAME 	${PROJECT_NAME}_test_${component_name}_cxx_17
+	NAME 	${PROJECT_NAME}_test_${component_name}_cxx17
 	COMMAND $<TARGET_FILE:${test_name}>
 )
