[cmake] add message about empty enabled/disabled components list

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,9 @@ list(REMOVE_ITEM CSL_DISABLED_COMPONENTS_LIST ${CSL_ENABLED_COMPONENTS_LIST})
 #### enabled
 message(STATUS "[${CMAKE_PROJECT_NAME}] enabled components:")
 list(APPEND CMAKE_MESSAGE_INDENT "   ")
+if (NOT CSL_ENABLED_COMPONENTS_LIST)
+    message(STATUS "(none)")
+endif()
 foreach(component_name IN LISTS CSL_ENABLED_COMPONENTS_LIST)
     message(STATUS "${CMAKE_PROJECT_NAME}::${component_name}")
 endforeach()
@@ -57,6 +60,9 @@ list(POP_BACK CMAKE_MESSAGE_INDENT)
 #### disabled
 message(STATUS "[${CMAKE_PROJECT_NAME}] disabled components:")
 list(APPEND CMAKE_MESSAGE_INDENT "   ")
+if (NOT CSL_DISABLED_COMPONENTS_LIST)
+    message(STATUS "(none)")
+endif()
 foreach(component_name IN LISTS CSL_DISABLED_COMPONENTS_LIST)
     message(STATUS "${CMAKE_PROJECT_NAME}::${component_name}")
 endforeach()
