--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,10 @@
         "CSL_BUILD_ALL": true,
         "CSL_ENABLE_ALL_TESTS" : true,
         "CSL_ENABLE_ALL_EXAMPLES": true,
-        "CMAKE_EXPORT_COMPILE_COMMANDS" : true
+        "CMAKE_EXPORT_COMPILE_COMMANDS" : true,
+        // CSL OPT-INS
+        // TODO(Guss): test matrix
+        "CSL_ENSURE__OPT_IN__IOSTREAM_SUPPORT": true,
+        "CSL_ENSURE__OPT_IN__FMT_SUPPORT": true
     }
 }
